Fix letter spacing for containers

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ div.container {
 
 .container-p {
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 3vw;
+	font-size: 2.5vw;
+	letter-spacing: 0.1vw;
 	text-align: left;
 	margin: auto 2vw auto 2vw;
 }
